force-app/main/default/objects/RT1__ReadyTalkMeeting__c/RT1__ReadyTalkMeeting__c.object-meta.xml
<CustomObject>
    <label>ReadyTalk Meeting</label>
    <nameField>
        <label>Meeting Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>