force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__AccessCode__c.field-meta.xml
<CustomField>
    <fullName>RT1__AccessCode__c</fullName>
    <label>Access Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>