force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__CampaignSyncStarted__c.field-meta.xml
<CustomField>
    <fullName>RT1__CampaignSyncStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a campaign sync has started. This field is not intended to be visible to users.</description>
    <inlineHelpText>Indicates that a campaign sync has started. This field is not intended to be visible to users.</inlineHelpText>
    <label>Campaign Sync Started</label>
    <type>Checkbox</type>
</CustomField>