force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__EncodedMeetingID__c.field-meta.xml
<CustomField>
    <fullName>RT1__EncodedMeetingID__c</fullName>
    <label>EncodedMeetingID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>