force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__InvitedMeetingMembers__c.field-meta.xml
<CustomField>
    <fullName>RT1__InvitedMeetingMembers__c</fullName>
    <label>Invited Meeting Members</label>
    <summaryFilterItems>
        <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </summaryFilterItems>
    <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>