force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__LastSyncStarted__c.field-meta.xml
<CustomField>
    <fullName>RT1__LastSyncStarted__c</fullName>
    <label>Last Sync Started</label>
    <type>DateTime</type>
</CustomField>