force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__LeadOwnerId__c.field-meta.xml
<CustomField>
    <fullName>RT1__LeadOwnerId__c</fullName>
    <label>Lead Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>