force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__MeetingDateTime__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingDateTime__c</fullName>
    <label>Meeting Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>