force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__MeetingID__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingID__c</fullName>
    <label>Meeting ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>