force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__MeetingTimeNative__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingTimeNative__c</fullName>
    <description>This time is in the Meeting&#39;s native time zone.</description>
    <label>Date &amp; Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>