force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__MeetingType__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingType__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>