force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__RegistrationURL__c.field-meta.xml
<CustomField>
    <fullName>RT1__RegistrationURL__c</fullName>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>