force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__ScheduledForImport__c.field-meta.xml
<CustomField>
    <fullName>RT1__ScheduledForImport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ScheduledForImport</label>
    <type>Checkbox</type>
</CustomField>