force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__UnmatchedRegistrants__c.field-meta.xml
<CustomField>
    <fullName>RT1__UnmatchedRegistrants__c</fullName>
    <label>Unmatched Registrants</label>
    <summaryFilterItems>
        <field>RT1__ReadyTalkMeetingMember__c.RT1__Unmatched__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>