force-app/main/default/objects/RT1__ReadyTalkMeeting__c/fields/RT1__UpdateExistingPeople__c.field-meta.xml
<CustomField>
    <fullName>RT1__UpdateExistingPeople__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Existing People</label>
    <type>Checkbox</type>
</CustomField>