force-app/main/default/objects/RT1__ReadyTalkMeeting__c/listViews/RT1__AllUpcomingMeetings.listView-meta.xml
<ListView>
    <fullName>RT1__AllUpcomingMeetings</fullName>
    <columns>NAME</columns>
    <columns>RT1__MeetingDateTime__c</columns>
    <columns>RT1__CCMeetingStatus__c</columns>
    <columns>RT1__InvitedMeetingMembers__c</columns>
    <columns>RT1__ConfirmedMeetingMembers__c</columns>
    <columns>RT1__AttendedMeetingMembers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RT1__CCMeetingStatus__c</field>
        <operation>equals</operation>
        <value>New,Scheduled</value>
    </filters>
    <label>All Upcoming Meetings</label>
</ListView>