force-app/main/default/objects/RT1__ReadyTalkMeeting__c/listViews/RT1__MyMeetings.listView-meta.xml
<ListView>
    <fullName>RT1__MyMeetings</fullName>
    <columns>NAME</columns>
    <columns>RT1__MeetingDateTime__c</columns>
    <columns>RT1__CCMeetingStatus__c</columns>
    <columns>RT1__InvitedMeetingMembers__c</columns>
    <columns>RT1__ConfirmedMeetingMembers__c</columns>
    <columns>RT1__AttendedMeetingMembers__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetings</label>
</ListView>